Addresses readability issues with event show banner
Many of the images contain text, and it was difficult to read.

--- a/app/styles/components/event-header.less
+++ b/app/styles/components/event-header.less
@@ -13,7 +13,8 @@
 }
 
 .EventHeader-thumbnail {
-  display: inline-block;
+  position: absolute;
+  top: -250px;
   width: 350px;
   height: 350px;
   background-color: white;
